--- a/style.css
+++ b/style.css
@@ -1,45 +1,36 @@
-.heading{
+body{
+    background-color: lightgreen;
+}
+.container{
+    border: 3px solid black;
+    background-color: white;
     text-align: center;
-    text-decoration: none;
-    padding: 50px;
-    margin: auto;
+    color: green;
+    font-size: larger;
+    width:400px;
+    justify-content: center;
+    margin: 70px auto 0px auto;
 }
-.bg-color{
-    background-color: rgb(3, 70, 70);
-    border: 2px solid;
-    margin: 70vb;
-    
-}
-.hello{
-    background-color: rgb(91, 88, 88);
+.type{
+    width: 80%;
+    padding: 10px;
+    border: 3px solid black;
 }
 
-.form{
-    text-align: center;
-    font-size: 20px;
-}
-
-.name{
-    font-size: 20px;
-}
-.subject{
-    font-size: 20px;
-}
-.number{
-    font-size: 20px;
-}
-.email{
-    font-size: 20px;
-}
 .message{
-    font-size: 20px;
-    border: 3;
-    padding: 0px 30px 60px 0px;
-    text-align: left;
+    width: 80%;
+    border: 3px solid black;
+    height: 80px;
+    padding: 10px;
 }
+
 .Submit{
-    text-align: center;
-    background-color: rgb(80, 43, 226);
-    padding: 5px 150px;
-    border-radius: 20px;
+    width: 95%;
+    background-color: green;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    color: white;
+    border-radius: 10px;
+    border: 3px solid black;
+    
 }
