--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body{
-    background-color: lightgreen;
+    background-color: #003366;
 }
 .container{
     border: 3px solid black;
-    background-color: white;
+    background-color: gray;
     text-align: center;
-    color: green;
+    color: #003366;
     font-size: larger;
-    width:400px;
+    width:500px;
     justify-content: center;
     margin: 70px auto 0px auto;
 }
@@ -25,12 +25,16 @@ body{
 }
 
 .Submit{
-    width: 95%;
-    background-color: green;
+    width: 85%;
+    background-color: #003366 ;
     margin-bottom: 10px;
     text-transform: uppercase;
-    color: white;
+    color: gray;
     border-radius: 10px;
     border: 3px solid black;
     
+}
+.formerror{
+    color: red;
+    font-weight: bold;
 }
